Fixing dark mode

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,26 @@ body {
     transition: background-color 0.3s, color 0.3s;
 }
 
+/* Dark mode styles */
+.dark-mode {
+    background-color: #222;
+    color: #f5f5f5;
+}
+
+.dark-mode nav {
+    background-color: #444;
+}
+
+.dark-mode .project-card {
+    background-color: #333;
+    color: white;
+}
+
+.dark-mode #theme-toggle {
+    background-color: #f5f5f5;
+    color: black;
+}
+
 /* Navigation Bar */
 nav {
     background-color: #333;
